--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 	<main mv-app="chat" mv-bar="no-status no-save no-login" mv-mode="read" mv-plugins="firebase-firestore@0.3 markdown"
-		mv-storage="firebase://mavo-demos/chat-rooms/[current_room]" mv-storage-key="AIzaSyDvZ3EBuhlvFm529vMPeU7dbqvdkjv9WQU"
+		mv-storage="firebase://ipgfou/chat-rooms/[current_room]" mv-storage-key="AIzaSyBCT16zdtEdm41VSigJwVlo1qptpb94fCQ"
 		mv-storage-providers="twitter facebook google github" mv-storage-options="realtime">
 
 		<div class="mv-bar" hidden>
